--- a/payloads/manifest.json
+++ b/payloads/manifest.json
@@ -24,6 +24,14 @@
         "type": "text/plain"
     },
     {
+        "id": "win-powershell-keylogger",
+        "title": "Powershell: Keylogger",
+        "os": "windows",
+        "desc": "Logs all keystrokes to stdout",
+        "filename": "powershell_keylogger.ps1",
+        "type": "text/plain"
+    },
+    {
         "id": "lin-bash-fork_bomb",
         "title": "Bash: Fork Bomb",
         "os": "linux",
